<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kuch.inteavuth.com.a5healthtrick.activity_first_tip">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/first_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/first_tip"
            android:textAlignment="center"
            android:textSize="25sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/first_post"
            android:layout_marginBottom="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/get_rid_dark_circle" />

        <Button
            android:id="@+id/button_read_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/my_sharp"
            android:onClick="readFirstTipDetail"
            android:text="@string/Read" />

        <LinearLayout
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/my_sharp"
                android:onClick="goBackHome"
                android:padding="16dp"
                android:text="@string/Home" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:background="@drawable/my_sharp"
                android:onClick="goSecondActivityTip"
                android:padding="16dp"
                android:text="@string/Next" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>