<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_fourth_tip">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/first_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/fourth_tip"
                android:textAlignment="center"
                android:textSize="25sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/first_post"
                android:layout_marginBottom="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/teeth_white" />

            <Button
                android:id="@+id/button_read_fourth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/my_sharp"
                android:onClick="readFourthTipDetail"
                android:text="@string/Read" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_previous_fourth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/my_sharp"
                android:onClick="backToThirdTip"
                android:padding="16dp"
                android:text="@string/Previous" />

            <Button
                android:id="@+id/button_next_fourth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:background="@drawable/my_sharp"
                android:onClick="goFifthActivityTip"
                android:padding="16dp"
                android:text="@string/Next" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>